metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/Account_Health__c.field-meta.xml
<CustomField>
    <fullName>Account_Health__c</fullName>
    <description>Field migrated from IgniteTech: Account Health</description>
    <inlineHelpText>Field migrated from IgniteTech: Account Health</inlineHelpText>
    <label>Account Health</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Green - Confirmed They Will Renew</fullName>
            </value>
            <value>
                <fullName>Amber - No Confirmation On Renewal</fullName>
            </value>
            <value>
                <fullName>Red - Confirmed They Will Not Renew</fullName>
            </value>
            <value>
                <fullName>Black - Termination Notice Received</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>