metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/AI_Pitch_Sentiment__c.field-meta.xml
<CustomField>
    <fullName>AI_Pitch_Sentiment__c</fullName>
    <inlineHelpText>Customer&apos;s sentiment towards the AI product features pitched as a part of the Renewal.</inlineHelpText>
    <label>AI Pitch Sentiment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Skeptical</fullName>
                <label>Skeptial / Against AI</label>
            </value>
            <value>
                <fullName>Not Interested - Don&apos;t see value in the feature</fullName>
            </value>
            <value>
                <fullName>Interested but not ready to act</fullName>
            </value>
            <value>
                <fullName>Highly Interested</fullName>
                <label>Highly Interested / Wants to try</label>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>