metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/AI_Pitch_Sentiment_Feedback__c.field-meta.xml
<CustomField>
    <fullName>AI_Pitch_Sentiment_Feedback__c</fullName>
    <inlineHelpText>Why did you select the value that you did for AI Pitch Sentiment? Is there anything not captured by the picklist options?</inlineHelpText>
    <label>AI Pitch Sentiment Feedback</label>
    <type>TextArea</type>
</CustomField>