metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/All_Tasks_Completed__c.field-meta.xml
<CustomField>
    <fullName>All_Tasks_Completed__c</fullName>
    <defaultValue>true</defaultValue>
    <description>All Tasks are completed</description>
    <inlineHelpText>All Tasks are completed</inlineHelpText>
    <label>All Tasks Completed</label>
    <type>Checkbox</type>
</CustomField>