metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/Ancillary_Loss_Reason_s__c.field-meta.xml
<CustomField>
    <fullName>Ancillary_Loss_Reason_s__c</fullName>
    <description>contributing factor in cancellation beyond the primary and sub catergories</description>
    <inlineHelpText>add as many as you need</inlineHelpText>
    <label>Ancillary Loss Reason(s)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Ancillary_Loss_Reason</valueSetName>
    </valueSet>
</CustomField>