metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/APN_Opportunity_ID__c.field-meta.xml
<CustomField>
    <fullName>APN_Opportunity_ID__c</fullName>
    <description>ID generated by AWS once a new opportunity submission is confirm in the portal (ACE/APN)</description>
    <inlineHelpText>ID generated by AWS once a new opportunity submission is confirm in the portal (ACE/APN)</inlineHelpText>
    <label>APN Opportunity ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>