metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/Approved_to_Update_Owner__c.field-meta.xml
<CustomField>
    <fullName>Approved_to_Update_Owner__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox field used to receive the Approve Process or automation execution result to decide whether to update owner. Hide from layout.</description>
    <label>Approved to Update Owner</label>
    <type>Checkbox</type>
</CustomField>