metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/Approving_VP__c.field-meta.xml
<CustomField>
    <fullName>Approving_VP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LAMBDA-49896 Lookup field to be used by approval process to set from Product Configuration</description>
    <inlineHelpText>Renewal Manager of the Product</inlineHelpText>
    <label>Approving VP</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>