metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/AR_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>AR_Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AR Email Sent</label>
    <type>Checkbox</type>
</CustomField>