metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/AR_Follow_up_Done__c.field-meta.xml
<CustomField>
    <fullName>AR_Follow_up_Done__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check once the AR Follow-up Email sequence has been completed</description>
    <label>AR Follow-up Done</label>
    <type>Checkbox</type>
</CustomField>