metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/AR_List_Total__c.field-meta.xml
<CustomField>
    <fullName>AR_List_Total__c</fullName>
    <formula>AR_Quote__r.SBQQ__ListAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total List Price from the Auto-Renewal quote. If AR Quote is not set, the amount will be 0</inlineHelpText>
    <label>AR List Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>