metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/AR_Pkg__c.field-meta.xml
<CustomField>
    <fullName>AR_Pkg__c</fullName>
    <description>Link to the AR Pkg for this renewal/customer if created</description>
    <label>AR Pkg Link</label>
    <type>Url</type>
</CustomField>