metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/AR_Quote__c.field-meta.xml
<CustomField>
    <fullName>AR_Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>We have two quotes: 1) Offer quote - what we want the customer to sign. 2) Auto-Renewal quote - what will be the default pricing if the customer doesn&apos;t sign. This field stores a reference to the AR Quote.</description>
    <inlineHelpText>Auto-Renewal Quote will be used if customer doesn&apos;t sign the primary quote and includes AR pricing. If we go to auto-renewal this quote will replace the Primary Quote.</inlineHelpText>
    <label>AR Quote</label>
    <referenceTo>SBQQ__Quote__c</referenceTo>
    <relationshipLabel>Opportunities (AR Quote)</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>