metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/AR_Quote_Success_Level__c.field-meta.xml
<CustomField>
    <fullName>AR_Quote_Success_Level__c</fullName>
    <description>LAMBDA-63807 Success level of the AR quote to be used by email template</description>
    <inlineHelpText>Success level of the Auto-renew Quote. Derived automatically from AR quote</inlineHelpText>
    <label>AR Quote Success Level</label>
    <length>100</length>
    <type>Text</type>
</CustomField>