metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/AR_Quote_Term__c.field-meta.xml
<CustomField>
    <fullName>AR_Quote_Term__c</fullName>
    <description>LAMBDA-63807 term derived from the AR quote</description>
    <inlineHelpText>Term value derived from AR quote automatically.</inlineHelpText>
    <label>AR Quote Term</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>