metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/AR_Scenario__c.field-meta.xml
<CustomField>
    <fullName>AR_Scenario__c</fullName>
    <description>Only used when auto-renewed. Record the status of the auto-renewal.</description>
    <inlineHelpText>INVOLUNTARY: Did not want to renew, but forced by AR clause.
 VOLUNTARY - TERMS: Wanted to renew, did AR to keep old Terms &amp; Conditions.
 VOLUNTARY - UNKNOWN: Wanted to renew, no issues or disputes, but couldn&apos;t get them to sign the new quote.
 VOLUNTARY - PRICE: Wanted to renew, but there was a price dispute.
 UNRESPONSIVE: No meaningful engagement with the customer (despite our efforts).
 GHOSTED: Conducted the Renewal call, but then lost contact with customer so don&apos;t understand the reason for AR.</inlineHelpText>
    <label>AR Scenario</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Involuntary</fullName>
            </value>
            <value>
                <fullName>Voluntary - Terms</fullName>
            </value>
            <value>
                <fullName>Voluntary - Unknown</fullName>
            </value>
            <value>
                <fullName>Voluntary - Price</fullName>
            </value>
            <value>
                <fullName>Unresponsive</fullName>
            </value>
            <value>
                <fullName>Ghosted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>