metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/Auto_Renewed_Last_Term__c.field-meta.xml
<CustomField>
    <fullName>Auto_Renewed_Last_Term__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Was this account Auto-Renewed last time?</inlineHelpText>
    <label>Auto-Renewed Last Term</label>
    <type>Checkbox</type>
</CustomField>