metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/AWS_Marketplace_Agreement_ID__c.field-meta.xml
<CustomField>
    <fullName>AWS_Marketplace_Agreement_ID__c</fullName>
    <description>Agreement ID of this opportunity in the AWS Marketplace.</description>
    <inlineHelpText>Agreement ID of this opportunity in the AWS Marketplace.</inlineHelpText>
    <label>AWS Marketplace Agreement ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>