metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/AWS_Marketplace_Offer_ID__c.field-meta.xml
<CustomField>
    <fullName>AWS_Marketplace_Offer_ID__c</fullName>
    <description>Offer ID of this opportunity in the AWS Marketplace.</description>
    <inlineHelpText>Offer ID of this opportunity in the AWS Marketplace.</inlineHelpText>
    <label>AWS Marketplace Offer ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>