metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/AWS_Spend__c.field-meta.xml
<CustomField>
    <fullName>AWS_Spend__c</fullName>
    <description>Core information to assess product fit</description>
    <inlineHelpText>Core information to assess product fit</inlineHelpText>
    <label>AWS Spend</label>
    <length>255</length>
    <type>Text</type>
</CustomField>