metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/Bad_Contact__c.field-meta.xml
<CustomField>
    <fullName>Bad_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Primary contact information is not correct.  Verify and update primary contact if necessary.</inlineHelpText>
    <label>Bad Contact</label>
    <type>Checkbox</type>
</CustomField>