metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/Billing_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Billing_Schedule__c</fullName>
    <label>Billing Schedule</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>100% Upfront</fullName>
            </value>
            <value>
                <fullName>50% Upon Receipt / 50% Net 30</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>100% Net 30</fullName>
            </value>
            <value>
                <fullName>Prepaid, Annual 2YR</fullName>
            </value>
            <value>
                <fullName>Prepaid, Annual 3YR</fullName>
            </value>
            <value>
                <fullName>Prepaid, Annual 4YR</fullName>
            </value>
            <value>
                <fullName>Prepaid, Annual 5YR</fullName>
            </value>
            <value>
                <fullName>SB Annual Billing</fullName>
            </value>
            <value>
                <fullName>SB Monthly Billing</fullName>
            </value>
            <value>
                <fullName>SB Monthly Billing Day 5 Net 30</fullName>
            </value>
            <value>
                <fullName>SB Monthly Billing EOM</fullName>
            </value>
            <value>
                <fullName>Monthly Billing</fullName>
            </value>
            <value>
                <fullName>Quarterly - 1 Year</fullName>
                <isActive>false</isActive>
                <label>Quarterly - 1 Year</label>
            </value>
            <value>
                <fullName>Semi-annually</fullName>
                <isActive>false</isActive>
                <label>Semi-annually</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>