metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/BU_Manager__c.field-meta.xml
<CustomField>
    <fullName>BU_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The BU Manager of this Product. This user is defined in the Product Configuration.</inlineHelpText>
    <label>BU Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>