metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <description>LAMBDA-60439 Business unit field to be referred by email templates</description>
    <formula>Text(Product_Configuration__r.Business_Unit__c)</formula>
    <inlineHelpText>Business Unit derived from Product configuration</inlineHelpText>
    <label>Business Unit</label>
    <type>Text</type>
</CustomField>