metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/Business_Value_Fit__c.field-meta.xml
<CustomField>
    <fullName>Business_Value_Fit__c</fullName>
    <description>Green: Confirmed AWS &amp; Confirmed spend of &gt;$100K &amp; Confirmed focus on cost optimization
||
Yellow: Unclear on AWS &amp; Unclear on spend &amp; Unclear on cost optimization priority
||
Red: Low/no usage or No savings focus</description>
    <inlineHelpText>Green: Confirmed AWS &amp; Confirmed spend of &gt;$100K &amp; Confirmed focus on cost optimization
||
Yellow: Unclear on AWS &amp; Unclear on spend &amp; Unclear on cost optimization priority
||
Red: Low/no usage or No savings focus</inlineHelpText>
    <label>Business Value Fit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Opportunity_Progression</valueSetName>
    </valueSet>
</CustomField>