metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/Call_Date__c.field-meta.xml
<CustomField>
    <fullName>Call_Date__c</fullName>
    <description>Field migrated from IgniteTech: Call Date</description>
    <inlineHelpText>Field migrated from IgniteTech: Call Date</inlineHelpText>
    <label>Call Date</label>
    <type>DateTime</type>
</CustomField>