metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/Call_that_IDs_Sentiment__c.field-meta.xml
<CustomField>
    <fullName>Call_that_IDs_Sentiment__c</fullName>
    <description>Link to the call that best proves the Customer Sentiment assessment - often the Renewal Call but could be a Follow-Up Call</description>
    <inlineHelpText>Add the Call Recording URL here for VP to review to validate Customer Sentiment inputs</inlineHelpText>
    <label>Call that IDs Sentiment</label>
    <type>Url</type>
</CustomField>