metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/Cancelation_Notice__c.field-meta.xml
<CustomField>
    <fullName>Cancelation_Notice__c</fullName>
    <description>Please provide the Salesforce document URL for the customer cancelation notice.</description>
    <inlineHelpText>Please provide the Salesforce document URL for the customer cancelation notice.</inlineHelpText>
    <label>Cancelation Notice</label>
    <type>Url</type>
</CustomField>