metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/Canceled_Before_Renewal_Cycle__c.field-meta.xml
<CustomField>
    <fullName>Canceled_Before_Renewal_Cycle__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if the subscription was canceled before the renewal process started (120 days before the renewal).</description>
    <inlineHelpText>Check if the subscription was canceled before the renewal cycle started (before we sent the first email or made the first call to the customer).</inlineHelpText>
    <label>Canceled Before Renewal Cycle</label>
    <type>Checkbox</type>
</CustomField>