metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/Central_AccountId__c.field-meta.xml
<CustomField>
    <fullName>Central_AccountId__c</fullName>
    <description>AccountId from Central Salesforce</description>
    <externalId>true</externalId>
    <label>Migrated AccountId</label>
    <length>80</length>
    <type>Text</type>
</CustomField>