metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/Central_AccountName__c.field-meta.xml
<CustomField>
    <fullName>Central_AccountName__c</fullName>
    <description>AccountId of the associated account in the system we&apos;ve migrated this opportunity from.</description>
    <externalId>true</externalId>
    <label>Migrated AccountName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>