metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/Central_End_User__c.field-meta.xml
<CustomField>
    <fullName>Central_End_User__c</fullName>
    <description>End User Account in the old Salesforce</description>
    <externalId>true</externalId>
    <label>Migrated End User Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>