metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/Central_EndUser_Name__c.field-meta.xml
<CustomField>
    <fullName>Central_EndUser_Name__c</fullName>
    <description>End User AccountId from Central Salesforce</description>
    <externalId>true</externalId>
    <label>EndUserName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>