metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/Central_First_Year_Contract_Value__c.field-meta.xml
<CustomField>
    <fullName>Central_First_Year_Contract_Value__c</fullName>
    <description>Copy of the First_Year_Contract_Value fron Central SF</description>
    <label>Migrated First_Year_Contract_Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>