metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/Central_ID__c.field-meta.xml
<CustomField>
    <fullName>Central_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>ID in the Salesforce we migrated this opportunity from</description>
    <externalId>true</externalId>
    <label>Migreated ID</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>