metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/Central_Loss_Reason__c.field-meta.xml
<CustomField>
    <fullName>Central_Loss_Reason__c</fullName>
    <label>Migrated Loss Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unhappy with Support</fullName>
            </value>
            <value>
                <fullName>3-Operational Dissatisfaction</fullName>
            </value>
            <value>
                <fullName>Product Replacement Due to M&amp;A</fullName>
            </value>
            <value>
                <fullName>Users Left the Company</fullName>
            </value>
            <value>
                <fullName>Lost to Competitor</fullName>
            </value>
            <value>
                <fullName>No Budget / Lost Funding</fullName>
            </value>
            <value>
                <fullName>Value</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>