metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/Central_OpportunityName__c.field-meta.xml
<CustomField>
    <fullName>Central_OpportunityName__c</fullName>
    <description>Previous Name in Central</description>
    <label>Migrated Opportunity Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>