metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/Central_OpportunityRecordType__c.field-meta.xml
<CustomField>
    <fullName>Central_OpportunityRecordType__c</fullName>
    <description>Record Type in Salesforce we migrated this opportunity from</description>
    <label>Migrated RecordType</label>
    <length>80</length>
    <type>Text</type>
</CustomField>