metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/Central_OwnerName__c.field-meta.xml
<CustomField>
    <fullName>Central_OwnerName__c</fullName>
    <description>Previous Owner in the Salesforce we migrated this opportunity from</description>
    <label>Migrated Owner Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>