metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/Central_StageName__c.field-meta.xml
<CustomField>
    <fullName>Central_StageName__c</fullName>
    <description>Copied value from the Salesforce we migrated this opportunity from</description>
    <externalId>true</externalId>
    <label>Migrated StageName</label>
    <length>80</length>
    <type>Text</type>
</CustomField>