metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/Central_Total_Contract_Value__c.field-meta.xml
<CustomField>
    <fullName>Central_Total_Contract_Value__c</fullName>
    <description>Copy of the Total contract value from the Salesforce we migrated this opportunity from</description>
    <label>Migrated Total Contract Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>