metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/Challenges__c.field-meta.xml
<CustomField>
    <fullName>Challenges__c</fullName>
    <description>Business Challenges Identified by Sales</description>
    <inlineHelpText>What Business challenges have you identified from the customer?</inlineHelpText>
    <label>Challenges</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>