metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/Champion_Creation__c.field-meta.xml
<CustomField>
    <fullName>Champion_Creation__c</fullName>
    <description>Green: Willing to shepherd and proactive about next steps &amp; aligned with CloudFix mission
||
Yellow: Unable to shepherd or not proactive about next steps
||
Red: Unwilling to move forward</description>
    <inlineHelpText>Green: Willing to shepherd and proactive about next steps &amp; aligned with CloudFix mission
||
Yellow: Unable to shepherd or not proactive about next steps
||
Red: Unwilling to move forward</inlineHelpText>
    <label>Champion Creation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Opportunity_Progression</valueSetName>
    </valueSet>
</CustomField>