metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/Chorus_Call_Link__c.field-meta.xml
<CustomField>
    <fullName>Chorus_Call_Link__c</fullName>
    <description>Field migrated from IgniteTech: Chorus Call Link</description>
    <inlineHelpText>Field migrated from IgniteTech: Chorus Call Link</inlineHelpText>
    <label>Chorus Call Link</label>
    <type>Url</type>
</CustomField>