metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/Chorus_Tracker__c.field-meta.xml
<CustomField>
    <fullName>Chorus_Tracker__c</fullName>
    <description>Field migrated from IgniteTech: Chorus Tracker. Data synced from Chorus.</description>
    <inlineHelpText>Field migrated from IgniteTech: Chorus Tracker. Data synced from Chorus.</inlineHelpText>
    <label>Chorus Tracker</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>