metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/Co_Term_Related_Opportunities_Count__c.field-meta.xml
<CustomField>
    <fullName>Co_Term_Related_Opportunities_Count__c</fullName>
    <description>Number of related co-term opportunities.</description>
    <inlineHelpText>Number of related co-term opportunities. This is automatically filled by OnOpportunityUpdate flow.</inlineHelpText>
    <label>Co-Term Related Opportunities Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>