metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/Co_Term_To__c.field-meta.xml
<CustomField>
    <fullName>Co_Term_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links to the primary opportunity that this opp is co-termed to.</description>
    <inlineHelpText>If this is a co-termed opportunity then link to the opportunity you are co-terming to. It should point to the lead opportunity that will be processed via O2C.</inlineHelpText>
    <label>Co-Term To</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The Co-Termed opportunity must come from the same account.</errorMessage>
        <filterItems>
            <field>$Source.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.AccountId</valueField>
        </filterItems>
        <infoMessage>The Co-Termed opportunity must come from the same account.</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Cotermed Opps</relationshipLabel>
    <relationshipName>Cotermed_Opps</relationshipName>
    <type>Lookup</type>
</CustomField>