metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/Competition__c.field-meta.xml
<CustomField>
    <fullName>Competition__c</fullName>
    <description>Populated by sales - Competitors, Sales position vs. competition and notes identified by Sales</description>
    <inlineHelpText>What competitors are you against and what is your position against the competition?</inlineHelpText>
    <label>Competition</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>