metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>Contact_ID__c</fullName>
    <description>Green: Agreed to meeting &amp; Has AWS/Cloud Role
||
Yellow: Hasn&apos;t agreed to meeting &amp; Has AWS/Cloud Role
||
Red: Declines Mtg or no response or No Roles in AWS/Cloud Role</description>
    <inlineHelpText>Green: Agreed to meeting &amp; Has AWS/Cloud Role
||
Yellow: Hasn&apos;t agreed to meeting &amp; Has AWS/Cloud Role
||
Red: Declines Mtg or no response or No Roles in AWS/Cloud Role</inlineHelpText>
    <label>Contact ID</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Opportunity_Progression</valueSetName>
    </valueSet>
</CustomField>