metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/Contract_Notes__c.field-meta.xml
<CustomField>
    <fullName>Contract_Notes__c</fullName>
    <description>Additional instructions to deal desk when submitting this opportunity for quoting</description>
    <inlineHelpText>Additional instructions to deal desk when submitting this opportunity for quoting</inlineHelpText>
    <label>Contract Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>