metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/Contracts__c.field-meta.xml
<CustomField>
    <fullName>Contracts__c</fullName>
    <description>Green: Complete Paper
||
Yellow: Signer is unclear or in Paperwork creation / review steps
||
Red: Signer IDed and reviewed contract but refuses to sign or unknown signer</description>
    <inlineHelpText>Green: Complete Paper
||
Yellow: Signer is unclear or in Paperwork creation / review steps
||
Red: Signer IDed and reviewed contract but refuses to sign or unknown signer</inlineHelpText>
    <label>Contracts</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Opportunity_Progression</valueSetName>
    </valueSet>
</CustomField>