metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/Count_Success_CSM_Milestone_Results__c.field-meta.xml
<CustomField>
    <fullName>Count_Success_CSM_Milestone_Results__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Count the number of CSM Milestone Results with Success Status</description>
    <label>Count Success CSM Milestone Results</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>