metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/Countdown_to_Close__c.field-meta.xml
<CustomField>
    <fullName>Countdown_to_Close__c</fullName>
    <description>LAMBDA-59716 formula field to display countdown</description>
    <formula>IF(IsClosed,&quot;&quot;,IF((CloseDate - TODAY()) &gt; 30,
 IMAGE(&quot;/img/samples/flag_green.gif&quot;,&quot;green&quot;,20,20),
  IMAGE(&quot;/img/samples/flag_red.gif&quot;,&quot;red&quot;,20,20)
) +TEXT(CloseDate - TODAY())+&quot; Days&quot;)</formula>
    <inlineHelpText>Formula field to display countdown to close date</inlineHelpText>
    <label>Countdown to Close</label>
    <type>Text</type>
</CustomField>