metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/CurrencyIsoCode__c.field-meta.xml
<CustomField>
    <fullName>CurrencyIsoCode__c</fullName>
    <description>Copied value from the Salesforce we migrated this opportunity from</description>
    <label>Migrated Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Currencies</valueSetName>
    </valueSet>
</CustomField>