metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/Current_Addons__c.field-meta.xml
<CustomField>
    <fullName>Current_Addons__c</fullName>
    <label>Current Addons</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>