metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/Current_Addons_ARR__c.field-meta.xml
<CustomField>
    <fullName>Current_Addons_ARR__c</fullName>
    <defaultValue>0.00</defaultValue>
    <description>Current Addons ARR = Current ARR - current master products ARR</description>
    <inlineHelpText>Current annual recurring revenue (ARR) of add-on products only (i.e. non-master products which cannot be sold separately)</inlineHelpText>
    <label>Current Addons ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>