metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/Current_AR_Scenario__c.field-meta.xml
<CustomField>
    <fullName>Current_AR_Scenario__c</fullName>
    <description>AR Scenario of Previous Renewal Opportunity</description>
    <formula>TEXT(Parent_Opportunity__r.AR_Scenario__c)</formula>
    <label>Current AR Scenario</label>
    <type>Text</type>
</CustomField>