metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/Current_ARR__c.field-meta.xml
<CustomField>
    <fullName>Current_ARR__c</fullName>
    <description>Current ARR = master products ARR + addons ARR of the parent subscription.</description>
    <inlineHelpText>Total annual recurring revenue (ARR) of the current (parent) subscription (include both addons ARR and master products ARR)</inlineHelpText>
    <label>Current ARR</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>